US10070 - spacing fix for when the upgrade header is present

--- a/app/modules/core/myCompany/_myCompany.scss
+++ b/app/modules/core/myCompany/_myCompany.scss
@@ -37,6 +37,9 @@
   @include vr-spacing(mh, 1);
   @include vr-spacing(mv, 1.25);
   @include vr-spacing(p, 0);
+  .cs-card-layout {
+    @include vr-spacing(mt, 1.25);
+  }
   .subscriptions.detail-view {
     @include vr-spacing(mb, 1.25);
     .subscription-column {
